--- a/Rmarkdown/InformalSensitiivity.Rmd
+++ b/Rmarkdown/InformalSensitiivity.Rmd
@@ -15,11 +15,11 @@ library(ggpubr)
 Run Solar Model with Data
 
 ```{r solar}
-source("../R/solarpv.R")
+source("../steven/R/solarpv.R")
 solarpv
 
 # read in R formatted data
-load("../Data/sierraczosolar.rda")
+load("../steven/data/sierraczosolar.rda")
 
 # already in the format required for the model
 head(sierraczosolar)
@@ -57,17 +57,23 @@ head(site2)
 tmp = map_df(site2,`[`, c("annual")) 
 
 site2df = data.frame(year = tmp$annual$year, elect= tmp$annual$elect)
+```
 
+```{r}
 # now we could plot
 ggplot(site2df, aes(year,elect, group=year ))+geom_boxplot()+labs(y="Electricity generated in W")
+```
 
+```{r}
 # we also might want an average across parameter uncertainty
 site2_average = site2df %>% group_by(year) %>% dplyr::summarize(elect=mean(elect))
 
 # now add this to the plot - note that we remove the grouping by using group=1
 ggplot(site2df, aes(year,elect, group=year))+geom_boxplot()+labs(y="Electricity in W")+
   geom_line(data=site2_average, aes(year, elect, group=1), col="orange")
+```
 
+```{r}
 # we could also plot how the mean annual electricity varies with efficiency (eff from above)
 site2[[1]]
 
